[package]
name = "muxed"
version = "0.8.2-development"
authors = ["Brian Pearce"]

[[bin]]
name = "muxed"
test = false

[workspace]
members = [
    "common",
    "edit",
    "load",
    "new",
    "snapshot"
]

[dependencies]
common   = { path = "./common" }
docopt   = "1.1.0"
edit     = { path = "./edit" }
load     = { path = "./load" }
new      = { path = "./new" }
snapshot = { path = "./snapshot" }
