[package]
name = "load"
version = "0.8.2"
authors = ["Brian Pearce"]
publish = false

[dependencies]
common    = { path = "../common" }
dirs      = "2.0.2"
libc      = "0.2.66"
yaml-rust = { version = "0.4.5", default-features = false }

[dev-dependencies]
rand      = "0.7.2"
snapshot  = { path = "../snapshot" }
