[package]
name = "load"
version = "0.8.2"
authors = ["Brian Pearce"]
publish = false
edition = "2024"

[dependencies]
common    = { path = "../common" }
dirs      = "6.0.0"
libc      = "0.2.66"
yaml-rust = { version = "0.4.5", default-features = false }

[dev-dependencies]
rand      = "0.9.1"
snapshot  = { path = "../snapshot" }
retry_test = { path = "../retry_test" }
