[package]
name = "snapshot"
version = "0.8.0"
authors = ["Brian Pearce"]
publish = false

[lib]
doctest = false

[dependencies]
common       = { path = "../common" }
new          = { path = "../new" }
regex        = "1.3.1"
serde        = { version = "1.0.103", features = ["derive"] }
serde_yaml   = "0.8"
