[package]
name = "snapshot"
version = "0.8.2"
authors = ["Brian Pearce"]
publish = false
edition = "2024"

[lib]
doctest = false

[dependencies]
common       = { path = "../common" }
new          = { path = "../new" }
regex        = "1.3.1"
serde        = { version = "1.0.103", features = ["derive"] }
serde_yaml   = "0.9.34" # If it works, it works
