[package]
name = "snapshot"
version = "0.8.2"
authors = ["Brian Pearce"]
publish = false
edition = "2024"

[lib]
doctest = false

[dependencies]
common       = { path = "../common" }
new          = { path = "../new" }
regex        = "1.3.1"
serde        = { version = "1.0.103", features = ["derive"] }
serde_json   = "1.0.145"
serde-saphyr = "0.0.7"
sysinfo      = { version = "0.37.2"}
